# minidlna

./: Makefile.am  configure.ac  content_manager_scanner.c  content_manager_scanner.h  inotify.c  log.c  log.h  metadata.c  minidlna.c  minidlna.conf  sql.c  upnpglobalvars.h  upnphttp.c  upnphttp.h  upnpsoap.c  utils.c
po/: da.po  de.po  es.po  fr.po  it.po  ja.po  minidlna.pot  nb.po  nl.po  pl.po  ru.po  sl.po  sv.po
